# iosh

./: .gitignore  README.md  default.nix  iosh.cabal  shell.nix
cli/IOSH/: Main.hs  Options.hs
cli/Polysemy/: TTY.hs  User.hs
cli/Polysemy/TTY/: IO.hs
cli/Polysemy/User/: IO.hs
common/IOSH/: Async.hs  IO.hs  Maybe.hs  Process.hs  Protocol.hs
common/IOSH/Protocol/: PTY.hs
common/Polysemy/: Async_.hs  Close.hs  Exit.hs  Process.hs  ScopedBundle.hs  Serialize.hs  Transport.hs  Untag.hs  Wait.hs
common/Polysemy/Transport/: IO.hs
daemon/IOSH/: Main.hs
daemon/Polysemy/: PTY.hs  Process.hs  Resize.hs  Transport.hs
daemon/Polysemy/PTY/: IO.hs
tests/: Main.hs
