cabal-version: 2.4
name: iosh
version: 0.1.0.0
maintainer: indiscrete.void@gmail.com
author: indiscrete_void

flag pedantic

common default
    default-language: Haskell2010
    default-extensions:
        DataKinds FlexibleContexts GADTs LambdaCase PolyKinds RankNTypes
        ScopedTypeVariables TypeApplications TypeOperators TypeFamilies
        ImportQualifiedPost StandaloneKindSignatures AllowAmbiguousTypes
        TemplateHaskell

    ghc-options:
        -fdefer-typed-holes -Weverything -Wno-missing-safe-haskell-mode
        -Wno-safe -Wno-unsafe -Wno-missing-import-lists
        -Wno-all-missed-specialisations -Wno-missed-specialisations
        -Wno-missing-local-signatures -Wno-monomorphism-restriction
        -Wno-implicit-prelude -threaded

    if flag(pedantic)
        ghc-options: -Werror

library common
    import: default
    exposed-modules:
        Polysemy.Transport
        Polysemy.Serialize
        Polysemy.Process
        Polysemy.Exit
        IOSH.Maybe
        IOSH.Protocol
        IOSH.IO

    hs-source-dirs: common
    build-depends:
        base ^>=4.16.4.0,
        bytestring ^>=0.11.5.2,
        process ^>=1.6.18.0,
        polysemy ^>=1.9.1.3,
        pipes ^>=4.3.16,
        cereal ^>=0.5.8.3,

executable iosh
    import: default
    main-is: IOSH/Main.hs
    hs-source-dirs: cli
    other-modules:
        Polysemy.User
        Polysemy.TTY
        IOSH.Options

    build-depends:
        base ^>=4.16.4.0,
        bytestring ^>=0.11.5.2,
        polysemy ^>=1.9.1.3,
        pipes ^>=4.3.16,
        common,
        unix ^>=2.8.5.0,
        terminal-size ^>=0.3.4,
        optparse-applicative ^>=0.18.1.0,

executable ioshd
    import: default
    main-is: IOSH/Main.hs
    hs-source-dirs: daemon
    other-modules:
        Polysemy.PTY

    build-depends:
        base ^>=4.16.4.0,
        bytestring ^>=0.11.5.2,
        polysemy ^>=1.9.1.3,
        polysemy-conc ^>=0.13.0.1,
        async ^>=2.2.5,
        pipes ^>=4.3.16,
        common,
        process ^>=1.6.18.0,
        posix-pty ^>=0.2.2,
