cabal-version: 3.6
name: iosh
version: 0.1.0.0
maintainer: indiscrete.void@gmail.com
author: indiscrete_void
license: AGPL-3.0-only

flag pedantic

common default
    default-language: Haskell2010
    default-extensions:
        DataKinds FlexibleContexts GADTs LambdaCase PolyKinds RankNTypes
        ScopedTypeVariables TypeApplications TypeOperators TypeFamilies
        ImportQualifiedPost StandaloneKindSignatures AllowAmbiguousTypes
        TemplateHaskell BlockArguments DerivingStrategies DeriveGeneric

    ghc-options:
        -fdefer-typed-holes -Weverything -Wno-missing-safe-haskell-mode
        -Wno-safe -Wno-unsafe -Wno-missing-import-lists
        -Wno-all-missed-specialisations -Wno-missed-specialisations
        -Wno-missing-local-signatures -Wno-monomorphism-restriction
        -Wno-implicit-prelude -threaded

    if flag(pedantic)
        ghc-options: -Werror

    build-depends:
        base ^>=4.17.2.1,
        polysemy,
        polysemy-scoped-process,

library common
    import: default
    exposed-modules:
        IOSH.Protocol

    hs-source-dirs: common
    build-depends:
        bytestring,
        cereal,
        async,

executable iosh
    import: default
    main-is: IOSH/Main.hs
    hs-source-dirs: cli
    other-modules:
        Polysemy.User
        Polysemy.TTY
        IOSH.Options

    build-depends:
        iosh:common,
        unix,
        terminal-size,
        optparse-applicative,
        process,
        polysemy-transport,

executable ioshd
    import: default
    main-is: IOSH/Main.hs
    hs-source-dirs: daemon
    build-depends:
        iosh:common,
        polysemy-conc,
        process,
        polysemy-transport,

test-suite tests
    import: default
    type: exitcode-stdio-1.0
    hs-source-dirs: tests
    main-is: Main.hs
    build-depends:
        iosh:common,
        cereal,
        tasty,
        tasty-hunit,
        bytestring,
